--- a/SensorCollector/src/main/AndroidManifest.xml
+++ b/SensorCollector/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
 </manifest>
