--- a/SensorCollector/src/main/AndroidManifest.xml
+++ b/SensorCollector/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="portrait"
             android:name="uk.ac.man.cs.leeming.sensorcollector.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -21,5 +22,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     
 </manifest>
